# Sahuaro

./: .gitignore  LICENCE  README.md  environment.yml  pyproject.toml
Examples/Flexible_IRMOF-1_Dubbeldam2007/: README.md
Examples/Flexible_IRMOF-1_Dubbeldam2007/0_input/: irmof1.cif
Examples/Flexible_IRMOF-1_Dubbeldam2007/3_simulation/: in.coeffs  sinput.in
Examples/Flexible_UiO-66_Rogge2016/: README.md
Examples/Flexible_UiO-66_Rogge2016/0_input/: sahuaro_input
Examples/Flexible_UiO-66_Rogge2016/3_simulation/: averages_unloaded.out  in.coeffs
Examples/IRMOF-1_Dubbeldam2007/: README
Examples/IRMOF-1_Dubbeldam2007/0_input/: sahuaro_input
Examples/IRMOF-1_Dubbeldam2007/1_output/: in.coeffs
Examples/IRMOF-1_Dubbeldam2007/3_simulation/: bondInfo.dump  box_params.avg  calculate_bond_averages.sh  in.data  log.lammps  sinput.in  stdout
Examples/MFI_rigid_difussion/: README
Examples/MFI_rigid_difussion/0_input/: sahuaro_input
Examples/MFI_rigid_difussion/1_output/: in.coeffs
Examples/MFI_rigid_difussion/3_simulation_msd/: in.coeffs  log.lammps  sinput.in  stdout
Examples/MFI_rigid_difussion/3_simulation_vacf/: log.lammps  run  sinput.in  stdout
Examples/Rigid_MFI_methane_difussion/: README.md
Examples/Rigid_MFI_methane_difussion/0_input/: MFI_SI.cif
Examples/Rigid_MFI_methane_difussion/3_simulation_msd/: sinput.in
Examples/UiO-66_Rogge2016/: README
Examples/UiO-66_Rogge2016/0_input/: UiO66_Pristine.cif
sahuaro/: Sahuaro.py  __init__.py  connectivity_registry.py  sahuaro_utils.py
tests/: test_parser_sahuarofile.py  test_sahuaro_functions.py
(+10 files in other folders)
